[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-cov-test"
version = "0.1.0"
authors = [
    {name = "Eliah Kagan", email = "degeneracypressure@gmail.com"},
]
description = "Simplified demonstration of GitPython #2052"
readme = "README.md"
requires-python = ">=3.9"
license = "0BSD"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = [
    "coverage >=7.9.0,<8",  # The warning this examines is new as of 7.9.0.
    "pytest >=8,<9",
    "pytest-cov >=6,<7",
]

[tool.pytest.ini_options]
addopts = "--cov"
